# MaryKay_bot

./: .env.dist  .gitignore  Dockerfile  bot.py  bot_start.sh  client_bot.py  consult_bot.py  docker-compose.yml  pyproject.toml  states.py  utils.py
DataBase/: config.py  files.py  models_db.py
DataBase/models/: ClientModel.py  ConsultantModel.py
DataBase/repositories/: ClientRepository.py  ConsultantRepository.py
db/: files.py  utils.py
db/models/: ClientModel.py  ConsultantModel.py
db/repositories/: ClientRepository.py  ConsultantRepository.py
handlers/: __init__.py  add_client.py  check_clients.py  delete_client.py  menu.py  sending.py  start.py
handlers/client_handlers/: authorization.py
handlers/consult_handlers/: __init__.py  add_client.py  check_clients.py  delete_client.py  help.py  menu.py  sending.py  start.py
keyboards/: all_type_check_keyboard.py  birthday_type_check_keyboard.py  change_keyboard.py  check_client_keyboard.py  check_clients_keyboard.py  client_or_consultant.py  day_keyboard.py  delete_photos.py  main_menu_keyboard.py  month_keyboard.py  send_type_keyboard.py  yes_no_keyboard.py
middlewares/: media_group_middleware.py
misc/: consts.py  env.py  utils.py
