[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["egor <ekurlenko17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
apscheduler = "^3.10.1"
peewee = "^3.16.2"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
